--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,9 @@
 }
 
 @theme inline {
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-jakarta);
   --font-mono: var(--font-geist-mono);
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-background-surface: var(--background-surface);
@@ -19,6 +20,13 @@
   --color-border: #30363d;
   --color-danger: #ef4444;
   --color-success: #10b981;
+
+  --text-xl: 46px;
+  --text-lg: 36px;
+  --text-md: 28px;
+  --text-sm: 20px;
+  --text-base: 16px;
+  --text-caption: 14px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -34,4 +42,25 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer base {
+  h1 {
+    @apply text-xl font-bold leading-tight;
+  }
+  h2 {
+    @apply text-lg font-bold leading-tight;
+  }
+  h3 {
+    @apply text-md font-semibold leading-snug;
+  }
+  h4 {
+    @apply text-sm font-semibold leading-snug;
+  }
+  p {
+    @apply text-base font-normal leading-normal;
+  }
+  .caption {
+    @apply text-xs font-light leading-snug;
+  }
 }
