--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,13 +20,6 @@
   --color-border: #30363d;
   --color-danger: #ef4444;
   --color-success: #10b981;
-
-  --text-xl: 46px;
-  --text-lg: 36px;
-  --text-md: 28px;
-  --text-sm: 20px;
-  --text-base: 16px;
-  --text-caption: 14px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -46,21 +39,24 @@ body {
 
 @layer base {
   h1 {
-    @apply text-xl font-bold leading-tight;
+    @apply text-5xl font-bold leading-tight;
   }
   h2 {
-    @apply text-lg font-bold leading-tight;
+    @apply text-4xl font-bold leading-tight;
   }
   h3 {
-    @apply text-md font-semibold leading-snug;
+    @apply text-3xl font-semibold leading-snug;
   }
   h4 {
-    @apply text-sm font-semibold leading-snug;
+    @apply text-2xl font-semibold leading-snug;
+  }
+  h5 {
+    @apply text-xl font-semibold leading-snug;
   }
   p {
     @apply text-base font-normal leading-normal;
   }
   .caption {
-    @apply text-xs font-light leading-snug;
+    @apply text-sm font-light leading-snug;
   }
 }
