--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,9 @@
   --foreground: #0d1117;
   --background-surface: #8b949e;
   --foreground-surface: #161b22;
+
+  --background-50: rgba(201, 209, 217, 0.5);
+  --foreground-50: rgba(0, 0, 0, 0.5);
 }
 
 @theme inline {
@@ -21,6 +24,9 @@
   --color-danger: #ef4444;
   --color-success: #10b981;
   --color-warning: #facc15;
+
+  --color-background-50: var(--background-50);
+  --color-foreground-50: var(--foreground-50);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,6 +35,9 @@
     --foreground: #c9d1d9;
     --background-surface: #161b22;
     --foreground-surface: #8b949e;
+
+    --background-50: rgba(0, 0, 0, 0.5);
+    --foreground-50: rgba(201, 209, 217, 0.5);
   }
 }
 
